--- a/docs/_layouts/primer.html
+++ b/docs/_layouts/primer.html
@@ -7,4 +7,5 @@ layout: default
     a {color: #7253ed}	  
     a.navigation-list-link {color: #7253ed}
 </style>	
+<center><p class="label label-red" style="opacity: 0.6;">Mockup / Illustrative</p></center>
 {{ content }}
